@@ -6238,3 +6238,6 @@ PACKAGE: 2.2.99.2
 
 2007-02-02 tdb
  * Make File::BOM use conditional on Perl version
+
+2007-02-07 moj
+ * Added WorkflowEdit - will be screen for editing workflows via web.
